crates/eml_cli/tests/snapshots/integration__ui__run@lists__leading_commas.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/lists/leading_commas.em
---
--- stdout ---
[11, 20]
[1, 2, 3]
--- stderr ---
