crates/eml_cli/tests/snapshots/integration__ui__run@lists__literals.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/lists/literals.em
---
--- stdout ---
[1, 2]
[[1], [], [2, 3]]
[]
eval 1
eval 2
eval 3
[1, 2, 3]
10
[1, 2]
True
empty
--- stderr ---
