crates/eml_cli/tests/snapshots/integration__ui__run@lists__patterns.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/lists/patterns.em
---
--- stdout ---
empty
one: 1
two: 3
many, starting with 1
6
True
1
--- stderr ---
