crates/eml_cli/tests/snapshots/integration__ui__run@lists__standard_types.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/lists/standard_types.em
---
--- stdout ---
[1, 2, 3]
[]
["a"]
[-1]
Some [1]
[Some (-1)]
[[1], []]
Wrap [1, 2, 3]
True
LT
GT
LT
False
Ok 1
True
[1]
[1]
[1]
[-1, 1, 2, 3]
--- stderr ---
